
SET(MODULE_INCLUDE_DIRS)

SET(BUILD_SHARED_LIBS OFF)
SET(QTPDF_VIEWER OFF)
ADD_SUBDIRECTORY(QtPDF)
LIST(APPEND MODULE_INCLUDE_DIRS ${QTPDF_INCLUDE_DIRS})
GET_TARGET_PROPERTY(QTPDF_LIBS qtpdf LOCATION)

SET(MODULE_INCLUDE_DIRS ${MODULE_INCLUDE_DIRS} PARENT_SCOPE)
SET(MODULE_LIBS ${QTPDF_LIBS} PARENT_SCOPE)
